# flutter_rust_http

./: .gitignore  .metadata  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/prayag/flutter_rust_http/: FlutterRustHttpPlugin.kt
android/src/test/kotlin/com/example/flutter_rust_http/: FlutterRustHttpPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/prayag/flutter_rust_http_example/: MainActivity.kt
example/android/app/src/main/res/xml/: network_security_config.xml
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/config/: app_theme.dart  benchmark_scenarios.dart
example/lib/models/: benchmark_models.dart
example/lib/providers/: benchmark_provider.dart
example/lib/screens/: analysis_tab.dart  dashboard_screen.dart  dio_http2_tab.dart  rust_dart_tab.dart  rust_rust_tab.dart
example/lib/services/: http_clients.dart
example/lib/widgets/: benchmark_history.dart  custom_app_bar.dart  live_metrics_card.dart  network_pattern_painter.dart  performance_summary.dart  realtime_chart.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_rust_http.podspec
ios/Classes/: FlutterRustHttpPlugin.swift
lib/: flutter_rust_http.dart  flutter_rust_http_method_channel.dart  flutter_rust_http_platform_interface.dart  flutter_rust_http_web.dart
lib/src/: bindings.dart  client.dart  exceptions.dart  isolate_pool.dart  models.dart
linux/: CMakeLists.txt  flutter_rust_http_plugin.cc  flutter_rust_http_plugin_private.h
linux/include/flutter_rust_http/: flutter_rust_http_plugin.h
linux/test/: flutter_rust_http_plugin_test.cc
macos/: flutter_rust_http.podspec
macos/Classes/: FlutterRustHttpPlugin.swift
rust/: Cargo.toml  build.rs
rust/flutter/lib/src/: bindings.h
rust/src/: client_config.rs  dart_dl_ffi.rs  header_utils.rs  http_client.rs  lib.rs  method_utils.rs  models.rs  parser.rs  shared_client.rs  test_client.rs  utils.rs
scripts/: buildOpenSSLAndroid.sh  buildOpenSSLWindows.sh  build_android.ps1  build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_windows.sh  downloadOpenSSLWindows.sh
test/: flutter_rust_http_method_channel_test.dart  flutter_rust_http_test.dart
windows/: CMakeLists.txt  flutter_rust_http_plugin.cpp  flutter_rust_http_plugin.h  flutter_rust_http_plugin_c_api.cpp
windows/include/flutter_rust_http/: flutter_rust_http_plugin_c_api.h
windows/test/: flutter_rust_http_plugin_test.cpp
