[package]
name = "flutter_rust_http"
version = "0.1.0"
edition = "2021"

[lib]
name = "flutter_rust_http"
crate-type = ["cdylib", "staticlib"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = "1.0"
futures = "0.3"
once_cell = "1.10"
parking_lot = "0.12"
libc = "0.2"
log = "0.4"
env_logger = "0.9"
lru-cache = "0.1.2"
dashmap = "6.1.0"
rayon = "1.8"
lru = "0.16.0"
simd-json = "0.15"
fxhash = "0.2.1"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19", default-features = false }

[build-dependencies]
cbindgen = "0.24"

[[bin]]
name = "test_client"
path = "src/test_client.rs"

#[profile.release]
#lto = true
#codegen-units = 1
#opt-level = 3
