[package]
name = "flutter_rust_http"
version = "0.1.0"
edition = "2021"

[lib]
name = "flutter_rust_http"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
# HTTP client with minimal features
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Minimal tokio for async
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"

# Utilities
bytes = "1.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
once_cell = "1.10"
parking_lot = "0.12"
libc = "0.2"

# High-performance JSON parsing
simd-json = { version = "0.15.1", features = ["serde"] }

# Optional: Only include logging for debug builds
log = { version = "0.4", optional = true }
env_logger = { version = "0.9", optional = true }
num_cpus = "1.17.0"
serde_json = "1.0.143"
mimalloc = "0.1.48"
lazy_static = "1.4"
rand = "0.9.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.19", default-features = false }

[build-dependencies]
cbindgen = "0.24"

[[bin]]
name = "test_client"
path = "src/bin/test_client.rs"

[features]
# Optional debug logging
debug-logging = ["log", "env_logger"]

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Best runtime performance
strip = true              # Remove debug symbols
panic = "abort"           # Reduce binary size and runtime overhead
overflow-checks = false   # Disable integer overflow checks for speed
